# linear-crf

./: .gitignore  LICENSE  README.md  requirements-dev.txt  setup.cfg
.circleci/: config.yml
benchmarks/: README.md  benchmark.py  requirements.txt
linear_crf/: __init__.py  linear_crf.py
tests/: test_linear_crf.py
