[metadata]
name = linear-crf-torch
version = 0.0.1
author = Romain Keramitas
author_email = r.keramitas@gmail.com
description =  Linear Conditional Random Field implementation in Pytorch 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/r0mainK/crf
project_urls =
    Bug Tracker = https://github.com/r0mainK/crf/issues
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Artificial Intelligence
license = MIT
keywords=
    crf
    linear crf
    conditional random field
    linear conditional random field
    pytorch
    torch

[options]
packages = linear_crf
python_requires = >=3.6
install_requires =
    torch>=1.3,<2

[flake8]
exclude =  .git, .eggs, __pycache__, .env/, build/, dist/, benchmark/
import-order-style = appnexus
inline-quotes = double
max-line-length = 99
max-doc-length = 99
per-file-ignores = __init__.py:F401
application-package-names = linear_crf

[tool:pytest]
minversion = 6.0
addopts = -ra -q --cov=linear_crf --cov-fail-under=100
testpaths =
    tests
